// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`create 1`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "HEALTH",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[`create 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[`create 3`] = `
{
  "error": ""phone" must be a string",
}
`;

exports[`create KYB Request 1`] = `
{
  "created_at": Any<String>,
  "documents": ArrayContaining [
    ObjectContaining {
      "created_at": Any<String>,
      "id": Any<String>,
      "media_id": Any<String>,
      "updated_at": Any<String>,
      "verification_id": Any<String>,
    },
  ],
  "id": Any<String>,
  "identity_id": Any<String>,
  "status": StringMatching /PENDING/,
  "updated_at": Any<String>,
}
`;

exports[`get KYB Request 1`] = `
{
  "created_at": Any<String>,
  "documents": ArrayContaining [
    ObjectContaining {
      "created_at": Any<String>,
      "filename": Any<String>,
      "id": Any<String>,
      "url": Any<String>,
    },
  ],
  "id": Any<String>,
  "identity_id": Any<String>,
  "status": StringMatching /PENDING/,
  "updated_at": Any<String>,
}
`;

exports[`get all 1`] = `
{
  "items": [
    {
      "address": "address",
      "benefits": null,
      "bio": "test",
      "city": "Tehran",
      "connection_id": null,
      "connection_status": null,
      "connections": 0,
      "country": "IR",
      "cover_image": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "culture": "test",
      "description": "test",
      "did": null,
      "email": "test@socious.io",
      "follower": false,
      "followers": 1,
      "following": true,
      "followings": 0,
      "geoname_id": null,
      "hiring": false,
      "id": Any<String>,
      "image": null,
      "impact_points": 0,
      "industry": null,
      "mission": "test",
      "mobile_country_code": null,
      "name": "test ORG",
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "phone": "9899993",
      "recommendations": null,
      "search_tsv": Any<String>,
      "shortname": Any<String>,
      "size": null,
      "social_causes": [
        "SOCIAL",
        "MENTAL",
      ],
      "status": "ACTIVE",
      "type": "SOCIAL",
      "updated_at": Any<String>,
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
      "website": "http://test.com",
    },
    {
      "address": "address",
      "benefits": null,
      "bio": "test",
      "city": "Tokyo",
      "connection_id": null,
      "connection_status": null,
      "connections": 0,
      "country": "JP",
      "cover_image": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "culture": "test",
      "description": "test",
      "did": null,
      "email": "test@socious.io",
      "follower": false,
      "followers": 1,
      "following": true,
      "followings": 0,
      "geoname_id": null,
      "hiring": false,
      "id": Any<String>,
      "image": null,
      "impact_points": 0,
      "industry": null,
      "mission": "test",
      "mobile_country_code": null,
      "name": "test ORG",
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "phone": "9379911",
      "recommendations": null,
      "search_tsv": Any<String>,
      "shortname": Any<String>,
      "size": null,
      "social_causes": [
        "SOCIAL",
        "HEALTH",
      ],
      "status": "ACTIVE",
      "type": "COOP",
      "updated_at": Any<String>,
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
      "website": "http://test.com",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 2,
}
`;

exports[`get filtered 1`] = `
{
  "items": [
    {
      "address": "address",
      "benefits": null,
      "bio": "test",
      "city": "Tokyo",
      "connection_id": null,
      "connection_status": null,
      "connections": 0,
      "country": "JP",
      "cover_image": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "culture": "test",
      "description": "test",
      "did": null,
      "email": "test@socious.io",
      "follower": false,
      "followers": 1,
      "following": true,
      "followings": 0,
      "geoname_id": null,
      "hiring": false,
      "id": Any<String>,
      "image": null,
      "impact_points": 0,
      "industry": null,
      "mission": "test",
      "mobile_country_code": null,
      "name": "test ORG",
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "phone": "9379911",
      "recommendations": null,
      "search_tsv": Any<String>,
      "shortname": Any<String>,
      "size": null,
      "social_causes": [
        "SOCIAL",
        "HEALTH",
      ],
      "status": "ACTIVE",
      "type": "COOP",
      "updated_at": Any<String>,
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
      "website": "http://test.com",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 1,
}
`;
